--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
         color: green;
       }
 
+      .toast {
+        display: none;
+        position: fixed;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: #28a745;
+        color: #fff;
+        padding: 12px 24px;
+        border-radius: 6px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        font-weight: bold;
+        z-index: 1000;
+      }
+
       @media (max-width: 500px) {
         .rating-container {
           padding: 20px;
@@ -85,9 +100,10 @@
 
     <div
       class="rating-container"
-      data-review-url="https://www.google.com/maps/place/Kan+Wale+Ganesh+Ji+Temple/@28.0249112,73.2872147,17z/data=!4m14!1m5!8m4!1e1!2s105374697016348976264!3m1!1e1!3m7!1s0x393fdd45e9dec4a7:0xa7420e8e33ccc34d!8m2!3d28.0249065!4d73.2897896!9m1!1b1!16s%2Fg%2F1q65xbwl7?entry=ttu"
+      data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review"
     >
       <h3>Please rate your experience</h3>
+
       <div class="stars" id="starContainer">
         <span class="star" data-value="1">&#9733;</span>
         <span class="star" data-value="2">&#9733;</span>
@@ -95,16 +111,61 @@
         <span class="star" data-value="4">&#9733;</span>
         <span class="star" data-value="5">&#9733;</span>
       </div>
+
       <div class="thank-you-popup" id="thankYou">
         Rating submitted. Thank you!
       </div>
+
+      <!-- Feedback form -->
+      <form
+        id="feedbackForm"
+        style="display: none; margin-top: 15px;"
+      >
+        <input type="hidden" name="rating" id="formRating" />
+
+        <label style="display: block; margin-bottom: 10px;">
+          Your email:
+          <input
+            type="email"
+            name="email"
+            required
+            style="width: 100%; padding: 8px; margin-top: 4px; border: 1px solid #ccc; border-radius: 6px;"
+          />
+        </label>
+
+        <label style="display: block; margin-bottom: 10px;">
+          Your feedback:
+          <textarea
+            name="message"
+            id="formMessage"
+            required
+            placeholder="Please let us know how we can improve..."
+            rows="4"
+            style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px;"
+          ></textarea>
+        </label>
+
+        <button
+          type="submit"
+          style="padding: 10px 20px; background: #333; color: #fff; border: none; border-radius: 6px; cursor: pointer;"
+        >
+          Submit Feedback
+        </button>
+      </form>
     </div>
+
+    <div class="toast" id="toast">Thank you for your valuable feedback!</div>
 
     <script>
       const stars = document.querySelectorAll('.star');
       const thankYou = document.getElementById('thankYou');
       const ratingContainer = document.querySelector('.rating-container');
       const googleReviewURL = ratingContainer.getAttribute('data-review-url');
+      const feedbackForm = document.getElementById('feedbackForm');
+      const formRating = document.getElementById('formRating');
+      const formMessage = document.getElementById('formMessage');
+      const toast = document.getElementById('toast');
+      let selectedRating = 0;
 
       stars.forEach((star) => {
         star.addEventListener('mouseover', () => {
@@ -118,16 +179,55 @@
 
         star.addEventListener('click', () => {
           const val = parseInt(star.getAttribute('data-value'));
+          selectedRating = val;
           clearSelection();
           selectStars(val);
 
           if (val < 4) {
-            thankYou.style.display = 'block';
+            feedbackForm.style.display = 'block';
+            thankYou.style.display = 'none';
+            formRating.value = val;
+            formMessage.value = `Rating: ${val} stars\n`;
           } else {
             window.location.href = googleReviewURL;
           }
         });
       });
+
+      feedbackForm.addEventListener('submit', async function (e) {
+        e.preventDefault();
+
+        const formData = new FormData(feedbackForm);
+
+        try {
+          const response = await fetch("https://formspree.io/f/xblkyjgk", {
+            method: "POST",
+            body: formData,
+            headers: {
+              Accept: "application/json",
+            },
+          });
+
+          if (response.ok) {
+            showToast();
+            feedbackForm.reset();
+            feedbackForm.style.display = 'none';
+            clearSelection();
+          } else {
+            alert("Error sending feedback. Please try again.");
+          }
+        } catch (error) {
+          alert("Network error. Please try again.");
+        }
+      });
+
+      function showToast() {
+        toast.style.display = "block";
+        setTimeout(() => {
+          toast.style.display = "none";
+          window.location.reload();
+        }, 3000);
+      }
 
       function highlightStars(rating) {
         stars.forEach((star) => {
@@ -143,6 +243,9 @@
       function clearSelection() {
         stars.forEach((star) => star.classList.remove('selected'));
         thankYou.style.display = 'none';
+        feedbackForm.style.display = 'none';
+        formMessage.value = '';
+        formRating.value = '';
       }
 
       function selectStars(rating) {
