--- a/index.html
+++ b/index.html
@@ -1,259 +1,299 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rate Your Experience</title>
-    <style>
-      :root {
-        --primary-color: #ffd700;
-        --bg-color: #f4f4f4;
-        --text-color: #333;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Rate Your Experience</title>
 
-      body {
-        font-family: 'Segoe UI', sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: var(--bg-color);
-        color: var(--text-color);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        text-align: center;
-      }
+  <!-- Animate.css for entry animations -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-      .header {
-        margin-bottom: 30px;
-      }
+  <!-- Hover.css for button effects -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"/>
 
+  <style>
+    :root {
+      --primary-color: #ffd700;
+      --bg-color: #f4f4f4;
+      --text-color: #333;
+      --accent: #333;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Segoe UI', sans-serif;
+      color: var(--text-color);
+      background: transparent;
+    }
+
+    #particles-js {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background: linear-gradient(135deg, #f0f8ff, #e0f7fa);
+    }
+
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .rating-container {
+      background-color: #ffffffee;
+      padding: 40px;
+      border-radius: 16px;
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.1);
+      max-width: 450px;
+      width: 90%;
+      margin: auto;
+      animation: fadeInDown 1s;
+      backdrop-filter: blur(8px);
+      margin-top: 60px;
+    }
+
+    .stars {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin: 20px 0;
+    }
+
+    .star {
+      font-size: 44px;
+      color: #ccc;
+      cursor: pointer;
+      transition: color 0.3s, transform 0.3s;
+    }
+
+    .star:hover {
+      transform: scale(1.2);
+    }
+
+    .star.hovered,
+    .star.selected {
+      color: var(--primary-color);
+    }
+
+    .thank-you-popup {
+      display: none;
+      margin-top: 10px;
+      font-weight: bold;
+      color: green;
+    }
+
+    form input,
+    form textarea {
+      width: 100%;
+      padding: 10px 14px;
+      margin-bottom: 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      transition: 0.3s;
+    }
+
+    form input:focus,
+    form textarea:focus {
+      border-color: var(--primary-color);
+      box-shadow: 0 0 0 2px rgba(255, 215, 0, 0.3);
+      outline: none;
+    }
+
+    button[type="submit"] {
+      background-color: var(--accent);
+      color: #fff;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .toast {
+      display: none;
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #28a745;
+      color: #fff;
+      padding: 12px 24px;
+      border-radius: 6px;
+      font-weight: bold;
+      z-index: 1000;
+      animation: fadeIn 0.5s ease;
+    }
+
+    @media (max-width: 500px) {
       .rating-container {
-        background-color: #fff;
-        padding: 30px 40px;
-        border-radius: 12px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-        max-width: 400px;
-        width: 90%;
-      }
-
-      .stars {
-        display: flex;
-        justify-content: center;
-        gap: 10px;
-        margin: 20px 0;
+        padding: 25px;
       }
 
       .star {
-        font-size: 40px;
-        color: #ccc;
-        cursor: pointer;
-        transition: color 0.3s ease;
+        font-size: 36px;
       }
+    }
+  </style>
+</head>
+<body>
+  <div id="particles-js"></div>
 
-      .star.hovered,
-      .star.selected {
-        color: var(--primary-color);
-      }
+  <div class="header animate__animated animate__fadeInDown">
+    <h2>Welcome to <span id="siteName">Our Store</span> — your feedback is valuable!</h2>
+  </div>
 
-      .thank-you-popup {
-        display: none;
-        margin-top: 15px;
-        font-weight: bold;
-        color: green;
-      }
+  <div
+    class="rating-container animate__animated animate__fadeInUp"
+    data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review"
+  >
+    <h3>Please rate your experience</h3>
 
-      .toast {
-        display: none;
-        position: fixed;
-        bottom: 30px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: #28a745;
-        color: #fff;
-        padding: 12px 24px;
-        border-radius: 6px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        font-weight: bold;
-        z-index: 1000;
-      }
-
-      @media (max-width: 500px) {
-        .rating-container {
-          padding: 20px;
-        }
-
-        .star {
-          font-size: 32px;
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="header">
-      <h2>
-        Welcome to <span id="siteName">Our Store</span> — your feedback is
-        valuable!
-      </h2>
+    <div class="stars" id="starContainer">
+      <span class="star" data-value="1">&#9733;</span>
+      <span class="star" data-value="2">&#9733;</span>
+      <span class="star" data-value="3">&#9733;</span>
+      <span class="star" data-value="4">&#9733;</span>
+      <span class="star" data-value="5">&#9733;</span>
     </div>
 
-    <div
-      class="rating-container"
-      data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review"
-    >
-      <h3>Please rate your experience</h3>
-
-      <div class="stars" id="starContainer">
-        <span class="star" data-value="1">&#9733;</span>
-        <span class="star" data-value="2">&#9733;</span>
-        <span class="star" data-value="3">&#9733;</span>
-        <span class="star" data-value="4">&#9733;</span>
-        <span class="star" data-value="5">&#9733;</span>
-      </div>
-
-      <div class="thank-you-popup" id="thankYou">
-        Rating submitted. Thank you!
-      </div>
-
-      <!-- Feedback form -->
-      <form
-        id="feedbackForm"
-        style="display: none; margin-top: 15px;"
-      >
-        <input type="hidden" name="rating" id="formRating" />
-
-        <label style="display: block; margin-bottom: 10px;">
-          Your email:
-          <input
-            type="email"
-            name="email"
-            required
-            style="width: 100%; padding: 8px; margin-top: 4px; border: 1px solid #ccc; border-radius: 6px;"
-          />
-        </label>
-
-        <label style="display: block; margin-bottom: 10px;">
-          Your feedback:
-          <textarea
-            name="message"
-            id="formMessage"
-            required
-            placeholder="Please let us know how we can improve..."
-            rows="4"
-            style="width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 6px;"
-          ></textarea>
-        </label>
-
-        <button
-          type="submit"
-          style="padding: 10px 20px; background: #333; color: #fff; border: none; border-radius: 6px; cursor: pointer;"
-        >
-          Submit Feedback
-        </button>
-      </form>
+    <div class="thank-you-popup" id="thankYou">
+      Rating submitted. Thank you!
     </div>
 
-    <div class="toast" id="toast">Thank you for your valuable feedback!</div>
+    <form id="feedbackForm" style="display: none;">
+      <input type="hidden" name="rating" id="formRating" />
 
-    <script>
-      const stars = document.querySelectorAll('.star');
-      const thankYou = document.getElementById('thankYou');
-      const ratingContainer = document.querySelector('.rating-container');
-      const googleReviewURL = ratingContainer.getAttribute('data-review-url');
-      const feedbackForm = document.getElementById('feedbackForm');
-      const formRating = document.getElementById('formRating');
-      const formMessage = document.getElementById('formMessage');
-      const toast = document.getElementById('toast');
-      let selectedRating = 0;
+      <label>
+        Your email:
+        <input type="email" name="email" required />
+      </label>
 
-      stars.forEach((star) => {
-        star.addEventListener('mouseover', () => {
-          const val = parseInt(star.getAttribute('data-value'));
-          highlightStars(val);
+      <label>
+        Your feedback:
+        <textarea name="message" id="formMessage" required placeholder="Let us know how we can improve..." rows="4"></textarea>
+      </label>
+
+      <button type="submit" class="hvr-pulse-grow">Submit Feedback</button>
+    </form>
+  </div>
+
+  <div class="toast" id="toast">Thank you for your valuable feedback!</div>
+
+  <!-- Particles.js -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+  <script>
+    particlesJS("particles-js", {
+      particles: {
+        number: { value: 60, density: { enable: true, value_area: 800 } },
+        color: { value: "#ffd700" },
+        shape: { type: "circle" },
+        opacity: { value: 0.4 },
+        size: { value: 4 },
+        line_linked: { enable: true, color: "#999", opacity: 0.3 },
+        move: { enable: true, speed: 2 }
+      }
+    });
+  </script>
+
+  <script>
+    const stars = document.querySelectorAll('.star');
+    const thankYou = document.getElementById('thankYou');
+    const ratingContainer = document.querySelector('.rating-container');
+    const googleReviewURL = ratingContainer.getAttribute('data-review-url');
+    const feedbackForm = document.getElementById('feedbackForm');
+    const formRating = document.getElementById('formRating');
+    const formMessage = document.getElementById('formMessage');
+    const toast = document.getElementById('toast');
+    let selectedRating = 0;
+
+    stars.forEach((star) => {
+      star.addEventListener('mouseover', () => {
+        const val = parseInt(star.getAttribute('data-value'));
+        highlightStars(val);
+      });
+
+      star.addEventListener('mouseout', () => clearHover());
+
+      star.addEventListener('click', () => {
+        const val = parseInt(star.getAttribute('data-value'));
+        selectedRating = val;
+        clearSelection();
+        selectStars(val);
+
+        if (val < 4) {
+          feedbackForm.style.display = 'block';
+          thankYou.style.display = 'none';
+          formRating.value = val;
+          formMessage.value = `Rating: ${val} stars\n`;
+        } else {
+          window.location.href = googleReviewURL;
+        }
+      });
+    });
+
+    feedbackForm.addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const formData = new FormData(feedbackForm);
+
+      try {
+        const response = await fetch("https://formspree.io/f/xblkyjgk", {
+          method: "POST",
+          body: formData,
+          headers: { Accept: "application/json" },
         });
 
-        star.addEventListener('mouseout', () => {
-          clearHover();
-        });
-
-        star.addEventListener('click', () => {
-          const val = parseInt(star.getAttribute('data-value'));
-          selectedRating = val;
+        if (response.ok) {
+          showToast();
+          feedbackForm.reset();
+          feedbackForm.style.display = 'none';
           clearSelection();
-          selectStars(val);
-
-          if (val < 4) {
-            feedbackForm.style.display = 'block';
-            thankYou.style.display = 'none';
-            formRating.value = val;
-            formMessage.value = `Rating: ${val} stars\n`;
-          } else {
-            window.location.href = googleReviewURL;
-          }
-        });
-      });
-
-      feedbackForm.addEventListener('submit', async function (e) {
-        e.preventDefault();
-
-        const formData = new FormData(feedbackForm);
-
-        try {
-          const response = await fetch("https://formspree.io/f/xblkyjgk", {
-            method: "POST",
-            body: formData,
-            headers: {
-              Accept: "application/json",
-            },
-          });
-
-          if (response.ok) {
-            showToast();
-            feedbackForm.reset();
-            feedbackForm.style.display = 'none';
-            clearSelection();
-          } else {
-            alert("Error sending feedback. Please try again.");
-          }
-        } catch (error) {
-          alert("Network error. Please try again.");
+        } else {
+          alert("Error sending feedback. Please try again.");
         }
+      } catch (error) {
+        alert("Network error. Please try again.");
+      }
+    });
+
+    function showToast() {
+      toast.style.display = "block";
+      setTimeout(() => {
+        toast.style.display = "none";
+        window.location.reload();
+      }, 3000);
+    }
+
+    function highlightStars(rating) {
+      stars.forEach((star) => {
+        const val = parseInt(star.getAttribute('data-value'));
+        star.classList.toggle('hovered', val <= rating);
       });
+    }
 
-      function showToast() {
-        toast.style.display = "block";
-        setTimeout(() => {
-          toast.style.display = "none";
-          window.location.reload();
-        }, 3000);
-      }
+    function clearHover() {
+      stars.forEach((star) => star.classList.remove('hovered'));
+    }
 
-      function highlightStars(rating) {
-        stars.forEach((star) => {
-          const val = parseInt(star.getAttribute('data-value'));
-          star.classList.toggle('hovered', val <= rating);
-        });
-      }
+    function clearSelection() {
+      stars.forEach((star) => star.classList.remove('selected'));
+      thankYou.style.display = 'none';
+      feedbackForm.style.display = 'none';
+      formMessage.value = '';
+      formRating.value = '';
+    }
 
-      function clearHover() {
-        stars.forEach((star) => star.classList.remove('hovered'));
-      }
-
-      function clearSelection() {
-        stars.forEach((star) => star.classList.remove('selected'));
-        thankYou.style.display = 'none';
-        feedbackForm.style.display = 'none';
-        formMessage.value = '';
-        formRating.value = '';
-      }
-
-      function selectStars(rating) {
-        stars.forEach((star) => {
-          const val = parseInt(star.getAttribute('data-value'));
-          star.classList.toggle('selected', val <= rating);
-        });
-      }
-    </script>
-  </body>
+    function selectStars(rating) {
+      stars.forEach((star) => {
+        const val = parseInt(star.getAttribute('data-value'));
+        star.classList.toggle('selected', val <= rating);
+      });
+    }
+  </script>
+</body>
 </html>
