--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rate Your Experience</title>
 
-  <!-- Animate.css for entry animations -->
+  <!-- Animate.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-  <!-- Hover.css for button effects -->
+  <!-- Hover.css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"/>
 
   <style>
     :root {
       --primary-color: #ffd700;
-      --bg-color: #f4f4f4;
-      --text-color: #333;
-      --accent: #333;
+      --bg-color: #0c0c1d;
+      --text-color: #ffffff;
+      --accent: #ffd700;
     }
 
     * {
@@ -28,8 +27,8 @@
       padding: 0;
       height: 100%;
       font-family: 'Segoe UI', sans-serif;
+      background: var(--bg-color);
       color: var(--text-color);
-      background: transparent;
     }
 
     #particles-js {
@@ -37,23 +36,42 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      background: linear-gradient(135deg, #f0f8ff, #e0f7fa);
+      background: linear-gradient(to bottom, #0c0c1d 0%, #1a1a2e 100%);
+    }
+
+    .moon {
+      position: fixed;
+      top: 40px;
+      right: 60px;
+      width: 100px;
+      height: 100px;
+      background: radial-gradient(circle at 30% 30%, #f0e68c, #bfae48);
+      border-radius: 50%;
+      box-shadow: 0 0 30px #f9f6b1;
+      z-index: 0;
+      animation: moonGlow 3s infinite ease-in-out alternate;
+    }
+
+    @keyframes moonGlow {
+      0% { box-shadow: 0 0 30px #f9f6b1; }
+      100% { box-shadow: 0 0 50px #f9f6b1; }
     }
 
     .header {
       text-align: center;
       margin-bottom: 20px;
+      margin-top: 40px;
     }
 
     .rating-container {
-      background-color: #ffffffee;
+      background-color: #1c1c2b;
       padding: 40px;
       border-radius: 16px;
-      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
       max-width: 450px;
       width: 90%;
       margin: auto;
-      animation: fadeInDown 1s;
+      animation: fadeInUp 1s;
       backdrop-filter: blur(8px);
       margin-top: 60px;
     }
@@ -66,26 +84,26 @@
     }
 
     .star {
-      font-size: 44px;
-      color: #ccc;
+      font-size: 48px;
+      color: #555;
       cursor: pointer;
-      transition: color 0.3s, transform 0.3s;
+      transition: transform 0.3s ease, text-shadow 0.5s ease;
     }
 
     .star:hover {
-      transform: scale(1.2);
+      transform: scale(1.3);
+      text-shadow: 0 0 10px var(--primary-color), 0 0 20px var(--primary-color);
     }
 
     .star.hovered,
     .star.selected {
       color: var(--primary-color);
+      animation: sparkle 1s infinite;
     }
 
-    .thank-you-popup {
-      display: none;
-      margin-top: 10px;
-      font-weight: bold;
-      color: green;
+    @keyframes sparkle {
+      0%, 100% { text-shadow: 0 0 4px #fff, 0 0 10px #ffd700; }
+      50% { text-shadow: 0 0 10px #fff, 0 0 20px #ffd700; }
     }
 
     form input,
@@ -93,26 +111,33 @@
       width: 100%;
       padding: 10px 14px;
       margin-bottom: 12px;
-      border: 1px solid #ccc;
+      border: 1px solid #333;
       border-radius: 8px;
-      transition: 0.3s;
+      background-color: #2e2e3e;
+      color: white;
     }
 
     form input:focus,
     form textarea:focus {
-      border-color: var(--primary-color);
-      box-shadow: 0 0 0 2px rgba(255, 215, 0, 0.3);
       outline: none;
+      border-color: var(--primary-color);
+      box-shadow: 0 0 5px var(--primary-color);
     }
 
     button[type="submit"] {
-      background-color: var(--accent);
-      color: #fff;
+      background-color: var(--primary-color);
+      color: #000;
       padding: 12px 24px;
       border: none;
       border-radius: 8px;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+
+    button[type="submit"]:hover {
+      background-color: #ffe144;
+      transform: translateY(-2px);
     }
 
     .toast {
@@ -135,23 +160,24 @@
         padding: 25px;
       }
 
-      .star {
-        font-size: 36px;
+      .moon {
+        width: 70px;
+        height: 70px;
+        right: 30px;
+        top: 20px;
       }
     }
   </style>
 </head>
 <body>
   <div id="particles-js"></div>
+  <div class="moon"></div>
 
   <div class="header animate__animated animate__fadeInDown">
     <h2>Welcome to <span id="siteName">Our Store</span> — your feedback is valuable!</h2>
   </div>
 
-  <div
-    class="rating-container animate__animated animate__fadeInUp"
-    data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review"
-  >
+  <div class="rating-container animate__animated animate__fadeInUp" data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review">
     <h3>Please rate your experience</h3>
 
     <div class="stars" id="starContainer">
@@ -162,23 +188,17 @@
       <span class="star" data-value="5">&#9733;</span>
     </div>
 
-    <div class="thank-you-popup" id="thankYou">
-      Rating submitted. Thank you!
-    </div>
-
     <form id="feedbackForm" style="display: none;">
       <input type="hidden" name="rating" id="formRating" />
-
       <label>
-        Your email:
-        <input type="email" name="email" required />
+        Your Mobile Number:
+        <input type="tel" name="mobile" pattern="[0-9]{10}" maxlength="10" required>
       </label>
-
+      
       <label>
         Your feedback:
         <textarea name="message" id="formMessage" required placeholder="Let us know how we can improve..." rows="4"></textarea>
       </label>
-
       <button type="submit" class="hvr-pulse-grow">Submit Feedback</button>
     </form>
   </div>
@@ -190,13 +210,13 @@
   <script>
     particlesJS("particles-js", {
       particles: {
-        number: { value: 60, density: { enable: true, value_area: 800 } },
-        color: { value: "#ffd700" },
+        number: { value: 80, density: { enable: true, value_area: 800 } },
+        color: { value: "#ffffff" },
         shape: { type: "circle" },
         opacity: { value: 0.4 },
-        size: { value: 4 },
-        line_linked: { enable: true, color: "#999", opacity: 0.3 },
-        move: { enable: true, speed: 2 }
+        size: { value: 2 },
+        line_linked: { enable: false },
+        move: { enable: true, speed: 0.5 }
       }
     });
   </script>
@@ -218,7 +238,7 @@
         highlightStars(val);
       });
 
-      star.addEventListener('mouseout', () => clearHover());
+      star.addEventListener('mouseout', clearHover);
 
       star.addEventListener('click', () => {
         const val = parseInt(star.getAttribute('data-value'));
@@ -228,7 +248,6 @@
 
         if (val < 4) {
           feedbackForm.style.display = 'block';
-          thankYou.style.display = 'none';
           formRating.value = val;
           formMessage.value = `Rating: ${val} stars\n`;
         } else {
@@ -240,7 +259,6 @@
     feedbackForm.addEventListener('submit', async function (e) {
       e.preventDefault();
       const formData = new FormData(feedbackForm);
-
       try {
         const response = await fetch("https://formspree.io/f/xblkyjgk", {
           method: "POST",
@@ -282,7 +300,6 @@
 
     function clearSelection() {
       stars.forEach((star) => star.classList.remove('selected'));
-      thankYou.style.display = 'none';
       feedbackForm.style.display = 'none';
       formMessage.value = '';
       formRating.value = '';
