--- a/index.html
+++ b/index.html
@@ -188,8 +188,11 @@
       <span class="star" data-value="5">&#9733;</span>
     </div>
 
-    <form id="feedbackForm" style="display: none;">
+    <!-- ✅ Updated FormSubmit Form -->
+    <form id="feedbackForm" style="display: none;" action="https://formsubmit.co/shekharpareek30@gmail.com" method="POST">
+      <input type="hidden" name="_template" value="table">
       <input type="hidden" name="rating" id="formRating" />
+
       <label>
         Your Mobile Number:
         <input type="tel" name="mobile" pattern="[0-9]{10}" maxlength="10" required>
@@ -199,6 +202,7 @@
         Your feedback:
         <textarea name="message" id="formMessage" required placeholder="Let us know how we can improve..." rows="4"></textarea>
       </label>
+
       <button type="submit" class="hvr-pulse-grow">Submit Feedback</button>
     </form>
   </div>
@@ -221,9 +225,9 @@
     });
   </script>
 
+  <!-- Form/Stars Script -->
   <script>
     const stars = document.querySelectorAll('.star');
-    const thankYou = document.getElementById('thankYou');
     const ratingContainer = document.querySelector('.rating-container');
     const googleReviewURL = ratingContainer.getAttribute('data-review-url');
     const feedbackForm = document.getElementById('feedbackForm');
@@ -256,35 +260,15 @@
       });
     });
 
-    feedbackForm.addEventListener('submit', async function (e) {
-      e.preventDefault();
-      const formData = new FormData(feedbackForm);
-      try {
-        const response = await fetch("https://formspree.io/f/xblkyjgk", {
-          method: "POST",
-          body: formData,
-          headers: { Accept: "application/json" },
-        });
-
-        if (response.ok) {
-          showToast();
-          feedbackForm.reset();
-          feedbackForm.style.display = 'none';
-          clearSelection();
-        } else {
-          alert("Error sending feedback. Please try again.");
-        }
-      } catch (error) {
-        alert("Network error. Please try again.");
-      }
+    feedbackForm.addEventListener('submit', function () {
+      showToast();
+      setTimeout(() => {
+        window.location.reload();
+      }, 3000);
     });
 
     function showToast() {
       toast.style.display = "block";
-      setTimeout(() => {
-        toast.style.display = "none";
-        window.location.reload();
-      }, 3000);
     }
 
     function highlightStars(rating) {
