--- a/index.html
+++ b/index.html
@@ -188,10 +188,15 @@
       <span class="star" data-value="5">&#9733;</span>
     </div>
 
-    <!-- ✅ Updated FormSubmit Form -->
+    <!-- ✅ Updated FormSubmit Form with Name -->
     <form id="feedbackForm" style="display: none;" action="https://formsubmit.co/shekharpareek30@gmail.com" method="POST">
       <input type="hidden" name="_template" value="table">
       <input type="hidden" name="rating" id="formRating" />
+
+      <label>
+        Your Name:
+        <input type="text" name="name" id="formName" required>
+      </label>
 
       <label>
         Your Mobile Number:
@@ -225,7 +230,7 @@
     });
   </script>
 
-  <!-- Form/Stars Script -->
+  <!-- Stars & Form Script -->
   <script>
     const stars = document.querySelectorAll('.star');
     const ratingContainer = document.querySelector('.rating-container');
@@ -233,6 +238,7 @@
     const feedbackForm = document.getElementById('feedbackForm');
     const formRating = document.getElementById('formRating');
     const formMessage = document.getElementById('formMessage');
+    const formName = document.getElementById('formName');
     const toast = document.getElementById('toast');
     let selectedRating = 0;
 
@@ -261,7 +267,15 @@
     });
 
     feedbackForm.addEventListener('submit', function () {
+      const name = formName.value.trim();
+      if (name) {
+        toast.textContent = `Thank you ${name} for your valuable feedback!`;
+      } else {
+        toast.textContent = `Thank you for your valuable feedback!`;
+      }
+
       showToast();
+
       setTimeout(() => {
         window.location.reload();
       }, 3000);
@@ -287,6 +301,7 @@
       feedbackForm.style.display = 'none';
       formMessage.value = '';
       formRating.value = '';
+      formName.value = '';
     }
 
     function selectStars(rating) {
