--- a/index.html
+++ b/index.html
@@ -1,300 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rate Your Experience</title>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Rate Us</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: linear-gradient(to top right, #0f172a, #1e293b);
+        color: #fff;
+        text-align: center;
+        padding-top: 100px;
+        margin: 0;
+      }
 
-  <!-- Animate.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-  <!-- Hover.css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"/>
-
-  <style>
-    :root {
-      --primary-color: #ffd700;
-      --bg-color: #0c0c1d;
-      --text-color: #ffffff;
-      --accent: #ffd700;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
-    }
-
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-      background: linear-gradient(to bottom, #0c0c1d 0%, #1a1a2e 100%);
-    }
-
-    .moon {
-      position: fixed;
-      top: 40px;
-      right: 60px;
-      width: 100px;
-      height: 100px;
-      background: radial-gradient(circle at 30% 30%, #f0e68c, #bfae48);
-      border-radius: 50%;
-      box-shadow: 0 0 30px #f9f6b1;
-      z-index: 0;
-      animation: moonGlow 3s infinite ease-in-out alternate;
-    }
-
-    @keyframes moonGlow {
-      0% { box-shadow: 0 0 30px #f9f6b1; }
-      100% { box-shadow: 0 0 50px #f9f6b1; }
-    }
-
-    .header {
-      text-align: center;
-      margin-bottom: 20px;
-      margin-top: 40px;
-    }
-
-    .rating-container {
-      background-color: #1c1c2b;
-      padding: 40px;
-      border-radius: 16px;
-      box-shadow: 0 12px 32px rgba(0, 0, 0, 0.5);
-      max-width: 450px;
-      width: 90%;
-      margin: auto;
-      animation: fadeInUp 1s;
-      backdrop-filter: blur(8px);
-      margin-top: 60px;
-    }
-
-    .stars {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin: 20px 0;
-    }
-
-    .star {
-      font-size: 48px;
-      color: #555;
-      cursor: pointer;
-      transition: transform 0.3s ease, text-shadow 0.5s ease;
-    }
-
-    .star:hover {
-      transform: scale(1.3);
-      text-shadow: 0 0 10px var(--primary-color), 0 0 20px var(--primary-color);
-    }
-
-    .star.hovered,
-    .star.selected {
-      color: var(--primary-color);
-      animation: sparkle 1s infinite;
-    }
-
-    @keyframes sparkle {
-      0%, 100% { text-shadow: 0 0 4px #fff, 0 0 10px #ffd700; }
-      50% { text-shadow: 0 0 10px #fff, 0 0 20px #ffd700; }
-    }
-
-    form input,
-    form textarea {
-      width: 100%;
-      padding: 10px 14px;
-      margin-bottom: 12px;
-      border: 1px solid #333;
-      border-radius: 8px;
-      background-color: #2e2e3e;
-      color: white;
-    }
-
-    form input:focus,
-    form textarea:focus {
-      outline: none;
-      border-color: var(--primary-color);
-      box-shadow: 0 0 5px var(--primary-color);
-    }
-
-    button[type="submit"] {
-      background-color: var(--primary-color);
-      color: #000;
-      padding: 12px 24px;
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    button[type="submit"]:hover {
-      background-color: #ffe144;
-      transform: translateY(-2px);
-    }
-
-    .toast {
-      display: none;
-      position: fixed;
-      bottom: 30px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #28a745;
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 6px;
-      font-weight: bold;
-      z-index: 1000;
-      animation: fadeIn 0.5s ease;
-    }
-
-    @media (max-width: 500px) {
       .rating-container {
-        padding: 25px;
+        background: rgba(255, 255, 255, 0.05);
+        backdrop-filter: blur(10px);
+        border-radius: 12px;
+        padding: 40px;
+        max-width: 400px;
+        margin: auto;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
       }
 
-      .moon {
-        width: 70px;
-        height: 70px;
-        right: 30px;
-        top: 20px;
+      .stars {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
       }
-    }
-  </style>
-</head>
-<body>
-  <div id="particles-js"></div>
-  <div class="moon"></div>
 
-  <div class="header animate__animated animate__fadeInDown">
-    <h2>Welcome to <span id="siteName">Our Store</span> — your feedback is valuable!</h2>
-  </div>
+      .star {
+        font-size: 32px;
+        color: #555;
+        cursor: pointer;
+        transition: transform 0.3s ease, color 0.3s ease;
+      }
 
-  <div class="rating-container animate__animated animate__fadeInUp" data-review-url="https://g.page/r/CdH9Q6TtqUGMEAE/review">
-    <h3>Please rate your experience</h3>
+      .star:hover,
+      .star.selected {
+        color: gold;
+        transform: scale(1.2);
+      }
 
-    <div class="stars" id="starContainer">
-      <span class="star" data-value="1">&#9733;</span>
-      <span class="star" data-value="2">&#9733;</span>
-      <span class="star" data-value="3">&#9733;</span>
-      <span class="star" data-value="4">&#9733;</span>
-      <span class="star" data-value="5">&#9733;</span>
+      form {
+        display: none;
+        flex-direction: column;
+        gap: 12px;
+      }
+
+      input,
+      textarea {
+        padding: 10px;
+        border-radius: 6px;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        width: 100%;
+      }
+
+      button {
+        background: #22c55e;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background 0.3s ease;
+      }
+
+      button:hover {
+        background: #16a34a;
+      }
+
+      .toast {
+        position: fixed;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #323232;
+        color: #fff;
+        padding: 16px 24px;
+        border-radius: 8px;
+        font-size: 16px;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        z-index: 999;
+      }
+
+      .toast.show {
+        opacity: 1;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="rating-container">
+      <h1>How was your experience?</h1>
+      <div class="stars" id="stars">
+        <span class="star" data-value="1">★</span>
+        <span class="star" data-value="2">★</span>
+        <span class="star" data-value="3">★</span>
+        <span class="star" data-value="4">★</span>
+        <span class="star" data-value="5">★</span>
+      </div>
+
+      <form
+        id="feedbackForm"
+        action="https://formsubmit.co/shekharpareek30@gmail.com"
+        method="POST"
+      >
+        <input type="hidden" name="_template" value="table" />
+        <input type="hidden" name="rating" id="formRating" />
+
+        <input
+          type="text"
+          name="name"
+          id="formName"
+          placeholder="Your Name"
+          required
+        />
+
+        <input
+          type="tel"
+          name="mobile"
+          placeholder="Your Mobile Number"
+          pattern="[0-9]{10}"
+          maxlength="10"
+          required
+        />
+
+        <textarea
+          name="message"
+          placeholder="Your feedback"
+          id="formMessage"
+          rows="4"
+          required
+        ></textarea>
+
+        <button type="submit">Submit Feedback</button>
+      </form>
     </div>
 
-    <!-- ✅ Updated FormSubmit Form -->
-    <form id="feedbackForm" style="display: none;" action="https://formsubmit.co/shekharpareek30@gmail.com" method="POST">
-      <input type="hidden" name="_template" value="table">
-      <input type="hidden" name="rating" id="formRating" />
+    <div id="toast" class="toast">Thank you for your valuable feedback!</div>
 
-      <label>
-        Your Mobile Number:
-        <input type="tel" name="mobile" pattern="[0-9]{10}" maxlength="10" required>
-      </label>
-      
-      <label>
-        Your feedback:
-        <textarea name="message" id="formMessage" required placeholder="Let us know how we can improve..." rows="4"></textarea>
-      </label>
+    <script>
+      const stars = document.querySelectorAll('.star');
+      const form = document.getElementById('feedbackForm');
+      const ratingInput = document.getElementById('formRating');
+      const toast = document.getElementById('toast');
 
-      <button type="submit" class="hvr-pulse-grow">Submit Feedback</button>
-    </form>
-  </div>
+      stars.forEach((star) => {
+        star.addEventListener('click', () => {
+          const rating = star.getAttribute('data-value');
+          ratingInput.value = rating;
 
-  <div class="toast" id="toast">Thank you for your valuable feedback!</div>
+          stars.forEach((s) => s.classList.remove('selected'));
+          for (let i = 0; i < rating; i++) {
+            stars[i].classList.add('selected');
+          }
 
-  <!-- Particles.js -->
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      particles: {
-        number: { value: 80, density: { enable: true, value_area: 800 } },
-        color: { value: "#ffffff" },
-        shape: { type: "circle" },
-        opacity: { value: 0.4 },
-        size: { value: 2 },
-        line_linked: { enable: false },
-        move: { enable: true, speed: 0.5 }
+          form.style.display = 'flex';
+        });
+      });
+
+      form.addEventListener('submit', function (e) {
+        e.preventDefault();
+
+        const name = document.getElementById('formName').value;
+        const formData = new FormData(form);
+
+        fetch(form.action, {
+          method: 'POST',
+          body: formData,
+        }).then(() => {
+          showToast(`Thank you, ${name}, for your valuable feedback!`);
+        });
+      });
+
+      function showToast(message) {
+        toast.textContent = message;
+        toast.classList.add('show');
+        setTimeout(() => {
+          toast.classList.remove('show');
+          window.location.reload();
+        }, 5000); // 5 seconds
       }
-    });
-  </script>
-
-  <!-- Form/Stars Script -->
-  <script>
-    const stars = document.querySelectorAll('.star');
-    const ratingContainer = document.querySelector('.rating-container');
-    const googleReviewURL = ratingContainer.getAttribute('data-review-url');
-    const feedbackForm = document.getElementById('feedbackForm');
-    const formRating = document.getElementById('formRating');
-    const formMessage = document.getElementById('formMessage');
-    const toast = document.getElementById('toast');
-    let selectedRating = 0;
-
-    stars.forEach((star) => {
-      star.addEventListener('mouseover', () => {
-        const val = parseInt(star.getAttribute('data-value'));
-        highlightStars(val);
-      });
-
-      star.addEventListener('mouseout', clearHover);
-
-      star.addEventListener('click', () => {
-        const val = parseInt(star.getAttribute('data-value'));
-        selectedRating = val;
-        clearSelection();
-        selectStars(val);
-
-        if (val < 4) {
-          feedbackForm.style.display = 'block';
-          formRating.value = val;
-          formMessage.value = `Rating: ${val} stars\n`;
-        } else {
-          window.location.href = googleReviewURL;
-        }
-      });
-    });
-
-    feedbackForm.addEventListener('submit', function () {
-      showToast();
-      setTimeout(() => {
-        window.location.reload();
-      }, 3000);
-    });
-
-    function showToast() {
-      toast.style.display = "block";
-    }
-
-    function highlightStars(rating) {
-      stars.forEach((star) => {
-        const val = parseInt(star.getAttribute('data-value'));
-        star.classList.toggle('hovered', val <= rating);
-      });
-    }
-
-    function clearHover() {
-      stars.forEach((star) => star.classList.remove('hovered'));
-    }
-
-    function clearSelection() {
-      stars.forEach((star) => star.classList.remove('selected'));
-      feedbackForm.style.display = 'none';
-      formMessage.value = '';
-      formRating.value = '';
-    }
-
-    function selectStars(rating) {
-      stars.forEach((star) => {
-        const val = parseInt(star.getAttribute('data-value'));
-        star.classList.toggle('selected', val <= rating);
-      });
-    }
-  </script>
-</body>
+    </script>
+  </body>
 </html>
